import as.list from AnnotationDbi instead of GenomicFeatures
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/branches/RELEASE_2_9/madman/Rpacks/VariantAnnotation@59931 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ import(AnnotationDbi)
 
 #importClassesFrom(AnnotationDbi, AnnotationDb)
 #importMethodsFrom(AnnotationDbi, cols, keys, select)
+importMethodsFrom(AnnotationDbi, as.list)
 
 importClassesFrom(Biobase, ScalarCharacter)
 importFrom(Biobase, mkScalar, selectSome)
@@ -14,7 +15,7 @@ importClassesFrom(BSgenome, BSgenome)
 importClassesFrom(snpStats, SnpMatrix)
 
 importClassesFrom(GenomicFeatures, TranscriptDb)
-importMethodsFrom(GenomicFeatures, as.list, cdsBy, exons, transcripts,
+importMethodsFrom(GenomicFeatures, cdsBy, exons, transcripts,
                   fiveUTRsByTranscript, threeUTRsByTranscript,
                   isActiveSeq, "isActiveSeq<-")
 importFrom(GenomicFeatures, extractTranscriptsFromGenome)
